- Moved around files to match Maven standard structure - Added a few lines to README.md - New screenshot1.jpg